--- a/index.html
+++ b/index.html
@@ -4,114 +4,195 @@
   <meta charset="UTF-8">
   <title>Anonymous Relationship Quiz 3.0</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f8f9fa; }
-    .container { max-width: 700px; margin: 40px auto; background: #fff; padding: 30px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    h2 { text-align: center; margin-bottom: 20px; }
-    .question { margin-bottom: 20px; font-size: 18px; font-weight: bold; }
-    .input { margin-bottom: 20px; }
-    textarea, input[type="text"], select { width: 100%; padding: 10px; font-size: 16px; border-radius: 6px; border: 1px solid #ccc; }
-    .button { background: #007bff; color: #fff; border: none; padding: 12px 20px; border-radius: 6px; font-size: 16px; cursor: pointer; }
-    .button:disabled { background: #ccc; cursor: not-allowed; }
-    .progress { height: 12px; background: #e9ecef; border-radius: 6px; overflow: hidden; margin-bottom: 20px; }
-    .progress-bar { height: 100%; width: 0; background: #28a745; transition: width 0.3s; }
-    .sponsors { display: flex; justify-content: space-around; margin: 15px 0; }
-    .sponsors img { height: 50px; }
+    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f4f4f9; }
+    .container { width:80%; max-width:800px; margin:50px auto; padding:20px; background:white; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1); }
+    h1,h2,h3 { text-align:center; }
+    .page { display:none; }
+    .active { display:block; }
+    .nav-btn { margin:20px 10px; padding:10px 20px; border:none; background:#4CAF50; color:white; border-radius:5px; cursor:pointer; }
+    .nav-btn:hover { background:#45a049; }
+    .sponsors { display:flex; justify-content:center; gap:20px; margin-bottom:15px; }
+    .sponsors img { height:40px; }
+    input, select, textarea { width:100%; padding:10px; margin:10px 0; border-radius:5px; border:1px solid #ccc; }
+    textarea { resize:vertical; }
+    .progress-bar { height:20px; background:#ddd; border-radius:10px; margin:20px 0; }
+    .progress { height:100%; background:#4CAF50; width:0%; border-radius:10px; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="sponsors">
-      <img src="WhatsApp Image 2025-09-13 at 10.49.05 PM (1).jpeg" alt="Sponsor 1">
-      <img src="WhatsApp Image 2025-09-13 at 10.49.04 PM (1).jpeg" alt="Sponsor 2">
+
+<div class="sponsors">
+  <img src="WhatsApp Image 2025-09-13 at 10.49.05 PM (1).jpeg" alt="Sponsor 1">
+  <img src="WhatsApp Image 2025-09-13 at 10.49.04 PM (1).jpeg" alt="Sponsor 2">
+</div>
+
+<div class="container">
+  <form id="quizForm" action="https://formsubmit.co/sagnikbhattacharjee8@gmail.com" method="POST">
+    <!-- Formsubmit settings -->
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_next" value="">
+
+    <!-- Landing Page -->
+    <div class="page active" id="page1">
+      <h1>Anonymous Relationship Quiz 3.0</h1>
+      <p>Welcome to the third edition of our Anonymous Relationship Quiz. Click continue to begin.</p>
+      <button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
     </div>
 
-    <h2>Anonymous Relationship Quiz 3.0</h2>
-
-    <div class="progress">
-      <div class="progress-bar" id="progressBar"></div>
+    <!-- Rules -->
+    <div class="page" id="page2">
+      <h2>Rules</h2>
+      <ul>
+        <li>Answer honestly.</li>
+        <li>No skipping questions.</li>
+        <li>Min 10 words for most answers (Q25–27 min 50 words).</li>
+      </ul>
+      <button type="button" class="nav-btn" onclick="prevPage()">Back</button>
+      <button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
     </div>
 
-    <form id="quizForm" action="https://formsubmit.co/sagnikbhattacharjee8@gmail.com" method="POST">
-      <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://thankyoupage.com">
+    <!-- Disclaimer -->
+    <div class="page" id="page3">
+      <h2>Disclaimer</h2>
+      <p>Your responses are anonymous and only for research/entertainment purposes.</p>
+      <button type="button" class="nav-btn" onclick="prevPage()">Back</button>
+      <button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
+    </div>
 
-      <div id="quiz"></div>
+    <!-- Age & Gender -->
+    <div class="page" id="page4">
+      <h2>Basic Info</h2>
+      <label>Age: <input type="number" name="age" required></label>
+      <label>Gender:
+        <select name="gender" required>
+          <option value="">Select</option>
+          <option value="Male">Male</option>
+          <option value="Female">Female</option>
+        </select>
+      </label>
+      <button type="button" class="nav-btn" onclick="prevPage()">Back</button>
+      <button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
+    </div>
 
-      <button type="button" class="button" id="nextBtn">Next</button>
-      <button type="submit" class="button" id="submitBtn" style="display:none;">Submit</button>
-    </form>
-  </div>
+    <!-- Progress bar -->
+    <div class="page" id="questions">
+      <h2>Questions</h2>
+      <div class="progress-bar"><div class="progress" id="progress"></div></div>
+      <div id="questionContainer"></div>
+      <button type="button" class="nav-btn" onclick="prevQuestion()">Back</button>
+      <button type="button" class="nav-btn" onclick="nextQuestion()">Next</button>
+    </div>
 
-  <script>
-    const questions = [
-      "Are you a Virgin ? (Yes / No)",
-      "Your Body Count ?",
-      "Name Top 6 Valuable Persons in from your life.",
-      "In a situation, You have to have s*x with the 3 names you mentioned, and the other 3 will be Cuckolded. Mention whom you will you have it and who will be Cuckolded.",
-      "As per your idea who will perform the best Among these persons, Rank Them. (Example 1st Mr. Abc 2nd Ms. Bdc)",
-      "Name Your Ex(s).",
-      "Mention how you came into a  relationship with them, How they or you approached.",
-      "Mention How your Partner Convinced you for loosing your virginity. (Explain the conversation)",
-      "Mention how it happened last time you had s*x. (Planing and Conversation)",
-      "What is the most discomfort you face while traveling on your 1st day of periods ?",
-      "For how many days your periods lasts ?",
-      "In which days you expect heavy flow ?",
-      "Have you ever visited a doctor for your periods ?",
-      "[Just a imagine will be displayed]",
-      "Have you ever sent or recieved nudes online ? If yes, to how many people ?",
-      "Have you ever faked org*sm ? Why ?",
-      "Have you ever filmed yourself during s*x session ? If yes, afterwards what happened to that video",
-      "What is your Favourite Position ? Why is that your favorite position ?",
-      "Maximum how many rounds have you done in one session/ one go ? Also Describe Whole night experience if any.",
-      "Ever had one-night stand ? Did you regret it after ?",
-      "If you had to do a threesome, whom would you choose except your partner, Who might not judge you afterwards ?",
-      "Have you ever been caught during the act ? By whom ?",
-      "Explain what do you usually do while cuddling/kissing/ starting the session ?",
-      "Ever you or your partner had given a hickey ? If yes, Explain How it happened and Experience afterwards.",
-      "Have you ever thought about group sex, Swigging or Watching others ?",
-      "Mention the Members you can tolerate in a group s*x .",
-      "Imagine you and your partner are trapped in a room for 24hrs -How would the things start ?",
-      "Imagine your partner is forcing you to multiple org*sms in one night until you couldn't handle more -- would you give it a try or try to stop, if you will try to stop after how many org*sms ?",
-      "If you have to pick between being dominant or completely submissive for one night - What would you choose and why ?",
-      "Imagine your Partner blindfolded you and suddenly brings another person to bed - Would you continue or stop it and Why ?",
-      "Imagine you had a org*sm but you can't moan / make noise - could you control yourself ? Or why ?",
-      "Imagine your Partner tied you down with vibrator toys or sybian left you for a shaking org*sm - How would you react ?",
-      "Explain your Fantasy and how you aim to achieve it if Money is not a problem.",
-      "Name the celebrity you're interested or you can have s*x with.",
-      "Do you agree? if not then Debate the points - S*x before marriage : <br>- It breaks the sanctity of marriage. <br>- It lacks commitment and responsibility. <br>- It may cause emotional pain and regret. <br>- It is seen as morally wrong in many cultures. <br>- It can lead to health and social risks. <br>- Waiting builds trust and respect in marriage."
-    ];
+    <!-- UID -->
+    <div class="page" id="pageUID">
+      <h2>Your Unique ID</h2>
+      <input type="text" id="uid" name="uid" readonly>
+      <p>Save this UID for reference.</p>
+      <button type="button" class="nav-btn" onclick="prevPage()">Back</button>
+      <button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
+    </div>
 
-    let current = 0;
-    const quizEl = document.getElementById("quiz");
-    const nextBtn = document.getElementById("nextBtn");
-    const submitBtn = document.getElementById("submitBtn");
-    const progressBar = document.getElementById("progressBar");
+    <!-- Credits -->
+    <div class="page" id="pageCredits">
+      <h2>Credits</h2>
+      <p>Thanks for participating in Quiz 3.0</p>
+      <button type="button" class="nav-btn" onclick="prevPage()">Back</button>
+      <button type="submit" class="nav-btn">Submit</button>
+    </div>
+  </form>
+</div>
 
-    function showQuestion() {
-      quizEl.innerHTML = `
-        <div class="question">Q${current+1}. ${questions[current]}</div>
-        <div class="input"><textarea name="q${current+1}" required></textarea></div>
-      `;
-      progressBar.style.width = `${((current+1)/questions.length)*100}%`;
-      if (current === questions.length - 1) {
-        nextBtn.style.display = "none";
-        submitBtn.style.display = "inline-block";
-      }
-    }
+<script>
+let currentPage = 1;
+let totalPages = 6;
+let currentQuestion = 0;
 
-    nextBtn.addEventListener("click", () => {
-      const answer = quizEl.querySelector("textarea");
-      if (!answer.value.trim()) {
-        alert("Please write your answer.");
-        return;
-      }
-      current++;
-      if (current < questions.length) {
-        showQuestion();
-      }
-    });
+const pages = document.querySelectorAll('.page');
+const progress = document.getElementById('progress');
+const questionContainer = document.getElementById('questionContainer');
 
-    showQuestion();
-  </script>
+const questions = [
+  "1. Are you a Virgin ? (Yes / No)",
+  "2. Your Body Count ?",
+  "3. Name Top 6 Valuable Persons in from your life.",
+  "4. In a situation, You have to have s*x with the 3 names you mentioned, and the other 3 will be Cuckolded. Mention whom you will you have it and who will be Cuckolded.",
+  "5. As per your idea who will perform the best Among these persons, Rank Them. (Example 1st Mr. Abc 2nd Ms. Bdc)",
+  "6. Name Your Ex(s).",
+  "7. Mention how you came into a relationship with them, How they or you approached.",
+  "8. Mention How your Partner Convinced you for loosing your virginity. (Explain the conversation)",
+  "9. Mention how it happened last time you had s*x. (Planing and Conversation)",
+  "10. What is the most discomfort you face while traveling on your 1st day of periods ?",
+  "11. For how many days your periods lasts ?",
+  "12. In which days you expect heavy flow ?",
+  "13. Have you ever visited a doctor for your periods ?",
+  "14. [Just a image will be displayed]",
+  "15. Have you ever sent or recieved nudes online ? If yes, to how many people ?",
+  "16. Have you ever faked org*sm ? Why ?",
+  "17. Have you ever filmed yourself during s*x session ? If yes, afterwards what happened to that video",
+  "18. What is your Favourite Position ? Why is that your favorite position ?",
+  "19. Maximum how many rounds have you done in one session/ one go ? Also Describe Whole night experience if any.",
+  "20. Ever had one-night stand ? Did you regret it after ?",
+  "21. If you had to do a threesome, whom would you choose except your partner, Who might not judge you afterwards ?",
+  "22. Have you ever been caught during the act ? By whom ?",
+  "23. Explain what do you usually do while cuddling/kissing/ starting the session ?",
+  "24. Ever you or your partner had given a hickey ? If yes, Explain How it happened and Experience afterwards.",
+  "25. Have you ever thought about group sex, Swigging or Watching others ?",
+  "26. Mention the Members you can tolerate in a group s*x .",
+  "27. Imagine you and your partner are trapped in a room for 24hrs -How would the things start ?",
+  "28. Imagine your partner is forcing you to multiple org*sms in one night until you couldn't handle more -- would you give it a try or try to stop, if you will try to stop after how many org*sms ?",
+  "29. If you have to pick between being dominant or completely submissive for one night - What would you choose and why ?",
+  "30. Imagine your Partner blindfolded you and suddenly brings another person to bed - Would you continue or stop it and Why ?",
+  "31. Imagine you had a org*sm but you can't moan / make noise - could you control yourself ? Or why ?",
+  "32. Imagine your Partner tied you down with vibrator toys or sybian left you for a shaking org*sm - How would you react ?",
+  "33. Explain your Fantasy and how you aim to achieve it if Money is not a problem.",
+  "34. Name the celebrity you're interested or you can have s*x with.",
+  "35. Do you agree? if not then Debate the points - S*x before marriage : (points listed)"
+];
+
+function showPage(n) {
+  pages.forEach((p,i)=>p.classList.remove('active'));
+  pages[n-1].classList.add('active');
+}
+
+function nextPage() {
+  if (currentPage < totalPages) {
+    currentPage++;
+    showPage(currentPage);
+    if (currentPage === 5) { showQuestion(0); }
+    if (currentPage === 6) { document.getElementById('uid').value = 'UID-' + Math.random().toString(36).substr(2,9); }
+  }
+}
+
+function prevPage() {
+  if (currentPage > 1) {
+    currentPage--;
+    showPage(currentPage);
+  }
+}
+
+function showQuestion(n) {
+  currentQuestion = n;
+  if (n >= questions.length) {
+    nextPage();
+    return;
+  }
+  questionContainer.innerHTML = `
+    <h3>${questions[n]}</h3>
+    <textarea name="q${n+1}" required></textarea>
+  `;
+  progress.style.width = ((n+1)/questions.length)*100 + '%';
+}
+
+function nextQuestion() {
+  showQuestion(currentQuestion+1);
+}
+
+function prevQuestion() {
+  if (currentQuestion > 0) showQuestion(currentQuestion-1);
+}
+
+showPage(currentPage);
+</script>
+
 </body>
 </html>
