--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Anonymous Relationship Quiz 3.0</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f4f4f9; }
-    .container { width:80%; max-width:800px; margin:50px auto; padding:20px; background:white; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1); }
-    h1,h2,h3 { text-align:center; }
-    .page { display:none; }
-    .active { display:block; }
-    .nav-btn { margin:20px 10px; padding:10px 20px; border:none; background:#4CAF50; color:white; border-radius:5px; cursor:pointer; }
-    .nav-btn:hover { background:#45a049; }
-    .sponsors { display:flex; justify-content:center; gap:20px; margin-bottom:15px; }
-    .sponsors img { height:40px; }
-    input, select, textarea { width:100%; padding:10px; margin:10px 0; border-radius:5px; border:1px solid #ccc; }
-    textarea { resize:vertical; }
-    .progress-bar { height:20px; background:#ddd; border-radius:10px; margin:20px 0; }
-    .progress { height:100%; background:#4CAF50; width:0%; border-radius:10px; }
-  </style>
+<meta charset="UTF-8">
+<title>Anonymous Relationship Quiz 3.0</title>
+<style>
+body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f4f4f9; }
+.container { width:80%; max-width:800px; margin:50px auto; padding:20px; background:white; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1); }
+h1,h2,h3 { text-align:center; }
+.page { display:none; }
+.active { display:block; }
+.nav-btn { margin:20px 10px; padding:10px 20px; border:none; background:#4CAF50; color:white; border-radius:5px; cursor:pointer; }
+.nav-btn:hover { background:#45a049; }
+.sponsors { display:flex; justify-content:center; gap:20px; margin-bottom:15px; position:fixed; top:0; left:0; right:0; background:#fff; padding:10px; z-index:999; }
+.sponsors img { height:40px; }
+input, select, textarea { width:100%; padding:10px; margin:10px 0; border-radius:5px; border:1px solid #ccc; }
+textarea { resize:vertical; }
+.progress-bar { height:20px; background:#ddd; border-radius:10px; margin:20px 0; }
+.progress { height:100%; background:#4CAF50; width:0%; border-radius:10px; }
+main { margin-top:90px; }
+</style>
 </head>
 <body>
 
@@ -27,169 +28,163 @@
 </div>
 
 <div class="container">
-  <form id="quizForm" action="https://formsubmit.co/sagnikbhattacharjee8@gmail.com" method="POST">
-    <!-- Formsubmit settings -->
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="">
+<form id="quizForm" action="https://formsubmit.co/sagnikbhattacharjee8@gmail.com" method="POST">
+<input type="hidden" name="_captcha" value="false">
+<input type="hidden" id="uidField" name="UID">
 
-    <!-- Landing Page -->
-    <div class="page active" id="page1">
-      <h1>Anonymous Relationship Quiz 3.0</h1>
-      <p>Welcome to the third edition of our Anonymous Relationship Quiz. Click continue to begin.</p>
-      <button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
-    </div>
+<!-- Landing -->
+<div class="page active" id="page1">
+<h1>Anonymous Relationship Quiz 3.0</h1>
+<p>Welcome to the third edition of our Anonymous Relationship Quiz. Click continue to begin.</p>
+<button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
+</div>
 
-    <!-- Rules -->
-    <div class="page" id="page2">
-      <h2>Rules</h2>
-      <ul>
-        <li>Answer honestly.</li>
-        <li>No skipping questions.</li>
-        <li>Min 10 words for most answers (Q25–27 min 50 words).</li>
-      </ul>
-      <button type="button" class="nav-btn" onclick="prevPage()">Back</button>
-      <button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
-    </div>
+<!-- Rules -->
+<div class="page" id="page2">
+<h2>Rules</h2>
+<ul>
+<li>Answer honestly.</li>
+<li>No skipping questions.</li>
+<li>Minimum 10 words for most answers.</li>
+</ul>
+<button type="button" class="nav-btn" onclick="prevPage()">Back</button>
+<button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
+</div>
 
-    <!-- Disclaimer -->
-    <div class="page" id="page3">
-      <h2>Disclaimer</h2>
-      <p>Your responses are anonymous and only for research/entertainment purposes.</p>
-      <button type="button" class="nav-btn" onclick="prevPage()">Back</button>
-      <button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
-    </div>
+<!-- Disclaimer -->
+<div class="page" id="page3">
+<h2>Disclaimer</h2>
+<p>Your responses are anonymous and only for research/entertainment purposes.</p>
+<button type="button" class="nav-btn" onclick="prevPage()">Back</button>
+<button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
+</div>
 
-    <!-- Age & Gender -->
-    <div class="page" id="page4">
-      <h2>Basic Info</h2>
-      <label>Age: <input type="number" name="age" required></label>
-      <label>Gender:
-        <select name="gender" required>
-          <option value="">Select</option>
-          <option value="Male">Male</option>
-          <option value="Female">Female</option>
-        </select>
-      </label>
-      <button type="button" class="nav-btn" onclick="prevPage()">Back</button>
-      <button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
-    </div>
+<!-- Basic Info -->
+<div class="page" id="page4">
+<h2>Basic Info</h2>
+<label>Age: <input type="number" name="Age" required></label>
+<label>Gender:
+<select name="Gender" required>
+<option value="">Select</option>
+<option value="Male">Male</option>
+<option value="Female">Female</option>
+</select>
+</label>
+<button type="button" class="nav-btn" onclick="prevPage()">Back</button>
+<button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
+</div>
 
-    <!-- Progress bar -->
-    <div class="page" id="questions">
-      <h2>Questions</h2>
-      <div class="progress-bar"><div class="progress" id="progress"></div></div>
-      <div id="questionContainer"></div>
-      <button type="button" class="nav-btn" onclick="prevQuestion()">Back</button>
-      <button type="button" class="nav-btn" onclick="nextQuestion()">Next</button>
-    </div>
+<!-- Questions -->
+<div class="page" id="pageQuestions">
+<h2>Questions</h2>
+<div class="progress-bar"><div class="progress" id="progress"></div></div>
+<div id="questionContainer"></div>
+<button type="button" class="nav-btn" onclick="prevQuestion()">Back</button>
+<button type="button" class="nav-btn" onclick="nextQuestion()">Next</button>
+</div>
 
-    <!-- UID -->
-    <div class="page" id="pageUID">
-      <h2>Your Unique ID</h2>
-      <input type="text" id="uid" name="uid" readonly>
-      <p>Save this UID for reference.</p>
-      <button type="button" class="nav-btn" onclick="prevPage()">Back</button>
-      <button type="button" class="nav-btn" onclick="nextPage()">Continue</button>
-    </div>
+<!-- Credits -->
+<div class="page" id="pageCredits">
+<h2>Credits</h2>
+<p>Thanks for participating in Quiz 3.0</p>
+<button type="button" class="nav-btn" onclick="prevPage()">Back</button>
+<button type="submit" class="nav-btn">Submit</button>
+</div>
 
-    <!-- Credits -->
-    <div class="page" id="pageCredits">
-      <h2>Credits</h2>
-      <p>Thanks for participating in Quiz 3.0</p>
-      <button type="button" class="nav-btn" onclick="prevPage()">Back</button>
-      <button type="submit" class="nav-btn">Submit</button>
-    </div>
-  </form>
+</form>
 </div>
 
 <script>
 let currentPage = 1;
-let totalPages = 6;
+const totalPages = 6;
 let currentQuestion = 0;
-
 const pages = document.querySelectorAll('.page');
-const progress = document.getElementById('progress');
 const questionContainer = document.getElementById('questionContainer');
+const progress = document.getElementById('progress');
+const uidField = document.getElementById('uidField');
 
 const questions = [
-  "1. Are you a Virgin ? (Yes / No)",
-  "2. Your Body Count ?",
-  "3. Name Top 6 Valuable Persons in from your life.",
-  "4. In a situation, You have to have s*x with the 3 names you mentioned, and the other 3 will be Cuckolded. Mention whom you will you have it and who will be Cuckolded.",
-  "5. As per your idea who will perform the best Among these persons, Rank Them. (Example 1st Mr. Abc 2nd Ms. Bdc)",
-  "6. Name Your Ex(s).",
-  "7. Mention how you came into a relationship with them, How they or you approached.",
-  "8. Mention How your Partner Convinced you for loosing your virginity. (Explain the conversation)",
-  "9. Mention how it happened last time you had s*x. (Planing and Conversation)",
-  "10. What is the most discomfort you face while traveling on your 1st day of periods ?",
-  "11. For how many days your periods lasts ?",
-  "12. In which days you expect heavy flow ?",
-  "13. Have you ever visited a doctor for your periods ?",
-  "14. [Just a image will be displayed]",
-  "15. Have you ever sent or recieved nudes online ? If yes, to how many people ?",
-  "16. Have you ever faked org*sm ? Why ?",
-  "17. Have you ever filmed yourself during s*x session ? If yes, afterwards what happened to that video",
-  "18. What is your Favourite Position ? Why is that your favorite position ?",
-  "19. Maximum how many rounds have you done in one session/ one go ? Also Describe Whole night experience if any.",
-  "20. Ever had one-night stand ? Did you regret it after ?",
-  "21. If you had to do a threesome, whom would you choose except your partner, Who might not judge you afterwards ?",
-  "22. Have you ever been caught during the act ? By whom ?",
-  "23. Explain what do you usually do while cuddling/kissing/ starting the session ?",
-  "24. Ever you or your partner had given a hickey ? If yes, Explain How it happened and Experience afterwards.",
-  "25. Have you ever thought about group sex, Swigging or Watching others ?",
-  "26. Mention the Members you can tolerate in a group s*x .",
-  "27. Imagine you and your partner are trapped in a room for 24hrs -How would the things start ?",
-  "28. Imagine your partner is forcing you to multiple org*sms in one night until you couldn't handle more -- would you give it a try or try to stop, if you will try to stop after how many org*sms ?",
-  "29. If you have to pick between being dominant or completely submissive for one night - What would you choose and why ?",
-  "30. Imagine your Partner blindfolded you and suddenly brings another person to bed - Would you continue or stop it and Why ?",
-  "31. Imagine you had a org*sm but you can't moan / make noise - could you control yourself ? Or why ?",
-  "32. Imagine your Partner tied you down with vibrator toys or sybian left you for a shaking org*sm - How would you react ?",
-  "33. Explain your Fantasy and how you aim to achieve it if Money is not a problem.",
-  "34. Name the celebrity you're interested or you can have s*x with.",
-  "35. Do you agree? if not then Debate the points - S*x before marriage : (points listed)"
+"1. Are you a Virgin ? (Yes / No)",
+"2. Your Body Count ?",
+"3. Name Top 6 Valuable Persons in from your life.",
+"4. In a situation, You have to have s*x with the 3 names you mentioned, and the other 3 will be Cuckolded. Mention whom you will you have it and who will be Cuckolded.",
+"5. As per your idea who will perform the best Among these persons, Rank Them. (Example 1st Mr. Abc 2nd Ms. Bdc)",
+"6. Name Your Ex(s).",
+"7. Mention how you came into a relationship with them, How they or you approached.",
+"8. Mention How your Partner Convinced you for loosing your virginity. (Explain the conversation)",
+"9. Mention how it happened last time you had s*x. (Planing and Conversation)",
+"10. What is the most discomfort you face while traveling on your 1st day of periods ?",
+"11. For how many days your periods lasts ?",
+"12. In which days you expect heavy flow ?",
+"13. Have you ever visited a doctor for your periods ?",
+"14. [Just a imagine will be displayed]",
+"15. Have you ever sent or recieved nudes online ? If yes, to how many people ?",
+"16. Have you ever faked org*sm ? Why ?",
+"17. Have you ever filmed yourself during s*x session ? If yes, afterwards what happened to that video",
+"18. What is your Favourite Position ? Why is that your favorite position ?",
+"19. Maximum how many rounds have you done in one session/ one go ? Also Describe Whole night experience if any.",
+"20. Ever had one-night stand ? Did you regret it after ?",
+"21. If you had to do a threesome, whom would you choose except your partner, Who might not judge you afterwards ?",
+"22. Have you ever been caught during the act ? By whom ?",
+"23. Explain what do you usually do while cuddling/kissing/ starting the session ?",
+"24. Ever you or your partner had given a hickey ? If yes, Explain How it happened and Experience afterwards.",
+"25. Have you ever thought about group sex, Swigging or Watching others ?",
+"26. Mention the Members you can tolerate in a group s*x .",
+"27. Imagine you and your partner are trapped in a room for 24hrs -How would the things start ?",
+"28. Imagine your partner is forcing you to multiple org*sms in one night until you couldn't handle more -- would you give it a try or try to stop, if you will try to stop after how many org*sms ?",
+"29. If you have to pick between being dominant or completely submissive for one night - What would you choose and why ?",
+"30. Imagine your Partner blindfolded you and suddenly brings another person to bed - Would you continue or stop it and Why ?",
+"31. Imagine you had a org*sm but you can't moan / make noise - could you control yourself ? Or why ?",
+"32. Imagine your Partner tied you down with vibrator toys or sybian left you for a shaking org*sm - How would you react ?",
+"33. Explain your Fantasy and how you aim to achieve it if Money is not a problem.",
+"34. Name the celebrity you're interested or you can have s*x with.",
+"35. Do you agree? if not then Debate the points - S*x before marriage : (points listed)"
 ];
 
-function showPage(n) {
+let answers = [];
+
+function showPage(n){
   pages.forEach((p,i)=>p.classList.remove('active'));
   pages[n-1].classList.add('active');
+  if(n===5) showQuestion(0);
+  if(n===6) uidField.value = "UID-"+Math.random().toString(36).substr(2,9);
 }
 
-function nextPage() {
-  if (currentPage < totalPages) {
-    currentPage++;
-    showPage(currentPage);
-    if (currentPage === 5) { showQuestion(0); }
-    if (currentPage === 6) { document.getElementById('uid').value = 'UID-' + Math.random().toString(36).substr(2,9); }
-  }
+function nextPage(){
+  if(currentPage<totalPages){currentPage++; showPage(currentPage);}
 }
 
-function prevPage() {
-  if (currentPage > 1) {
-    currentPage--;
-    showPage(currentPage);
-  }
+function prevPage(){
+  if(currentPage>1){currentPage--; showPage(currentPage);}
 }
 
-function showQuestion(n) {
+function showQuestion(n){
   currentQuestion = n;
-  if (n >= questions.length) {
-    nextPage();
-    return;
-  }
-  questionContainer.innerHTML = `
-    <h3>${questions[n]}</h3>
-    <textarea name="q${n+1}" required></textarea>
-  `;
-  progress.style.width = ((n+1)/questions.length)*100 + '%';
+  if(n>=questions.length){ nextPage(); return; }
+  const val = answers[n]||"";
+  questionContainer.innerHTML = `<h3>${questions[n]}</h3><textarea name="q${n+1}" required>${val}</textarea>`;
+  progress.style.width = ((n+1)/questions.length*100)+"%";
 }
 
-function nextQuestion() {
+function nextQuestion(){
+  const textarea = questionContainer.querySelector("textarea");
+  answers[currentQuestion] = textarea.value.trim();
+  if(!answers[currentQuestion]) { alert("Please answer the question."); return; }
   showQuestion(currentQuestion+1);
 }
 
-function prevQuestion() {
-  if (currentQuestion > 0) showQuestion(currentQuestion-1);
+function prevQuestion(){
+  if(currentQuestion>0){
+    const textarea = questionContainer.querySelector("textarea");
+    answers[currentQuestion] = textarea.value.trim();
+    showQuestion(currentQuestion-1);
+  } else { prevPage(); }
 }
+
+document.getElementById('quizForm').addEventListener('submit',function(e){
+  const textarea = questionContainer.querySelector("textarea");
+  if(textarea) answers[currentQuestion] = textarea.value.trim();
+});
 
 showPage(currentPage);
 </script>
